chore: Update build tools version, local properties

--- a/local.properties
+++ b/local.properties
@@ -9,3 +9,6 @@
 # header note.
 #Sat Oct 22 16:16:25 EDT 2016
 sdk.dir=/Users/owen/Library/Android/sdk
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
