--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
+    compile 'com.android.support:design:25.0.0'
 }
